tinyc/test/bad/struct-as-bool-ternary.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    s ? 1 : 0;
    return 0;
}
